--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,7 @@
 }
 
 .logo{
-    height: 800px; 
-    margin: 2;
-    max-height: 130px;
+       max-height: 80px;
 }
 
 .logo img {
@@ -86,9 +84,9 @@
     color: var(--bs-primary) !important;
 }
 
-.btn-primary-outline-0:hover {
-    background: var(--bs-secondary) !important;
+.btn-primary-outline-0:hover {  
     color: var(--bs-white) !important;
+      background: var(--bs-secondary) !important;
 }
 
 .btn-light-outline-0:hover {
@@ -557,7 +555,7 @@
 }
 
 .team .team-item .team-text {
-    background: var(--bs-primary);
+    background: #d271bc;
 }
 
 .team .team-item .team-social {
@@ -602,7 +600,7 @@
 }
 
 .team .team-item:hover .team-text {
-    background: var(--bs-secondary);
+    background:#a92378;
 }
 /*** Team End ***/
 
@@ -685,3 +683,125 @@
     background: var(--bs-dark) !important;
 }
 /*** copyright end ***/
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i');
+html,body{
+  margin:0;
+  height:120%;
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+a{
+  text-decoration:none
+}
+.header{
+  position:relative;
+  overflow:hidden;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  height:50vw;
+  min-height:400px;
+  max-height:550px;
+  min-width:300px;
+  color:#eee;     
+}
+.header:after{
+  content:"";
+  width:100%;
+  height:100%;
+  position:absolute;
+  bottom:0;
+  left:0;
+  z-index:-1
+}
+.header:before{
+  content:"";
+  width:100%;
+  height:200%;
+  position:absolute;
+  top:0;
+  left:0; 
+  background-size:100%;
+  background-attachment:fixed;
+  animation: grow 360s  linear 10ms infinite;
+  transition:all 0.4s ease-in-out;
+  z-index:-2
+}
+.header a{
+  color:#eee
+}
+.menu{
+  display:block;
+  width:40px;
+  height:30px;
+  border:2px solid #fff;
+  border-radius:3px;
+  position:absolute;
+  right:20px;
+  top:20px;
+  text-decoration:none
+}
+.menu:after{
+  content:"";
+  display:block;
+  width:20px;
+  height:3px;
+  background:#fff;
+  position:absolute;
+  margin:0 auto;
+  top:5px;
+  left:0;
+  right:0;
+  box-shadow:0 8px, 0 16px
+}
+
+.sides, .info{
+  flex: 0 0 auto;
+  width:50%
+}
+.info{
+  width:100%;
+  padding:15% 10% 0 10%;
+  text-align:center;
+  text-shadow:0 2px 3px rgba(0,0,0,0.2)
+}
+.author{
+  display:inline-block;
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  /* background:url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat; */
+  background-size:cover;
+  box-shadow:0 2px 3px rgba(0,0,0,0.3);
+  margin-bottom:3px
+}
+.info h4, .meta{
+  font-size:0.7em
+}
+.meta{
+  font-style:italic;
+}
+@keyframes grow{
+  0% { transform: scale(1) translateY(0px)}
+  50% { transform: scale(1.2) translateY(-400px)}
+}
+.content{  
+  padding:5% 10%;
+  text-align:justify
+}
+.btn{
+  color:#333;
+  border:2px solid;
+  border-radius:3px;
+  text-decoration:none;
+  display:inline-block;
+  padding:5px 10px;
+  font-weight:600
+}
+
+.twtr{
+  margin-top:100px
+}.btn.twtr:after{content:"\1F426";padding-left:5px}
