--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@
 
 /*** Appointment  Start ***/
 .appointment {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/appointment-background.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/header-contac.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
