--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@
 
 
 .bg-breadcrumb {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/appointment-background.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/Header-3.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
