--- a/css/style.css
+++ b/css/style.css
@@ -794,10 +794,10 @@ a{
 }
 .btn{
   color:#333;
-  border:2px solid;
+  border:1px solid;
   border-radius:3px;
   text-decoration:none;
-  display:inline-block;
+  /* display:inline-block; */
   padding:5px 10px;
   font-weight:600
 }
